Gazette: Fix issues with widget block centre alignemnts.

--- a/gazette/css/blocks.css
+++ b/gazette/css/blocks.css
@@ -184,11 +184,14 @@ p.has-drop-cap:not(:focus)::first-letter {
 5.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Archives, Categories & Latest Posts */
+/* General Widget styles */
 
-.wp-block-archives.aligncenter,
 .wp-block-categories.aligncenter,
-.wp-block-latest-posts.aligncenter {
+.wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
+.wp-block-latest-posts.aligncenter,
+.wp-block-latest-comments.aligncenter {
+	list-style-position: inside;
 	text-align: center;
 }
 
