--- a/gazette/css/editor-blocks.css
+++ b/gazette/css/editor-blocks.css
@@ -518,13 +518,12 @@ p.has-drop-cap:not(:focus)::first-letter {
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Archives, Categories & Latest Posts */
+/* General Widget styles */
 
-.editor-styles-wrapper .wp-block-archives ul,
-.editor-styles-wrapper .wp-block-categories ul,
-.editor-styles-wrapper .wp-block-categories ul ul,
-.editor-styles-wrapper .wp-block-latest-posts ul {
-	list-style: square inside;
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
+	list-style-position: inside;
 }
 
 /* Latest Comments */
